--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,7 @@ exclude:
   - README.md
 
 collections:
-  bookmarks:
-    output: true
-    permalink: :name
+  - bookmarks
 
 defaults:
   - scope:
